--- a/myapp/templates/myapp/Test.html
+++ b/myapp/templates/myapp/Test.html
@@ -1,7 +1,7 @@
 {% load static %}
 <html>
     <head>
-        <link rel="stylesheet" href="{% static 'myapp/style.css' %}">
+        <link rel="stylesheet" href="{% static 'myapp/styles.css' %}"><!-- Tailwindを読み込む-->
     </head>
     <body>
         <h1>This is a Test</h1>
