--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -1,7 +1,7 @@
 {% load static %}
 <html>
     <head>
-        <link rel="stylesheet" href="{% static 'myapp/styles.css' %}">
+        <link rel="stylesheet" href="{% static 'myapp/styles.css' %}"><!-- Tailwindを読み込む-->
     </head>
     <body>
         <nav class="bg-white shadow-lg"><!-- バックグランドカラーと影を付ける-->
