--- a/myapp/templates/myapp/detail.html
+++ b/myapp/templates/myapp/detail.html
@@ -1,4 +1,8 @@
+{% extends "myapp/base.html" %}  <!--base templateを読み込む-->
+{% block content %}
 "This is detail page"
 <h1>{{product.name}}</h1>
 <h2>{{product.price}}</h2>
 <h3>{{product.desc}}</h3>
+
+{% endblock %}
