--- a/myapp/templates/myapp/detail.html
+++ b/myapp/templates/myapp/detail.html
@@ -1,8 +1,13 @@
 {% extends "myapp/base.html" %}  <!--base templateを読み込む-->
 {% block content %}
-"This is detail page A"
-<h1>{{product.name}}</h1>
-<h2>{{product.price}}</h2>
-<h3>{{product.desc}}</h3>
 
-{% endblock %}
+<div class="flex p-10 w-full h-200"> <!--div内のコンテンツを並列に並べる-->
+    <img class="w-1/3" src="{{product.image.url}}" alt="">  <!-- DB Productテーブルから画像取得-->
+    <div class="w-2/3 text-xl ml-10 mt-0">
+        <div class="mt-0">{{product.name}}</div>
+        <div class="mt-5 text-green-500">$ {{product.price}}</div>
+        <div class="mt-5 text-gray-700">{{product.desc}}</div>
+    </div>
+</div>
+
+{% endblock %} 
